<resources>
    <string name="app_name">Hunza Bykea</string>


    <string name="frame2description">With Hunza Bikeya, You can book a bike rider in hunza anywhere anytime.</string>

    <string name="mapbox_access_token">sk.eyJ1IjoiYmFpZ3VsbGFoNDQiLCJhIjoiY2xobTg3cWl4MDQzcTNkbmc4M29jamV1eCJ9.UaBdqZyxWMLD_R3-liX4ZQ</string>

    <string name="frame2Heading">Book your Rider</string>

    <string name="frame3description">Let’s keep burning, to archive yours goals,We
provide professional taxi services for you.</string>
    <string name="frame3Heading">Best Experience of Riding</string>

    <string name="frame4description">Your satisfaction is our number one priority
Let’s make your day great with Hunza Bikeya!</string>
    <string name="frame4Heading">Let’s Start</string>
    <string name="text_start">d</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="_03xxxxxxxx">3XXXXXXXX</string>
    <string name="connect">Connect</string>
    <string name="please_enter_a_valid_mobile_number">*Please enter a valid mobile number</string>
    <string name="privacy_policy">Privacy Policy!</string>
    <string name="enter_your_contact_number">Enter your Contact Number</string>
    <string name="enter_the_information_below">Enter the information below</string>
    <string name="welcome">Welcome!</string>
    <string name="google_maps_api_key">AIzaSyDSvbjNgfuH8RX3IAZK7LavIua-fIYn8Q8</string>
    <string name="location_dialog_desc">We need access to your\n location to be able to use\n this service</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="search_where_you_go">Search where you go</string>
    <string name="search">Search</string>
    <string name="user_location_permission_not_granted">User not allowed the permissions</string>
    <string name="title_activity_search">SearchActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="home">Home</string>
    <string name="booking">Booking</string>
    <string name="wallet">Wallet</string>
    <string name="notifications">Notifications</string>
    <string name="active_now">Active Now</string>
    <string name="completed">Completed</string>
    <string name="cancelled">Cancelled</string>
    <string name="my_bookings">My Bookings</string>
    <string name="tab2">Tab2</string>
    <string name="date_amp_time"><![CDATA[Date & Time]]></string>


</resources>