<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottom_home"
        android:icon="@drawable/f_home"
        android:title="@string/home"
        />

    <item
        android:id="@+id/bottom_booking"
        android:icon="@drawable/bottom_booking_icon"
        android:title="@string/booking" />

    <item
        android:id="@+id/bottom_notification"
        android:icon="@drawable/notification"
        android:title="@string/notifications"
        />
    <item
        android:id="@+id/bottom_wallet"
        android:icon="@drawable/wallet_f"
        android:title="@string/wallet" />


    <item
        android:id="@+id/bottom_account"
        android:icon="@drawable/user"
        android:title="Account" />
</menu>